chore: add README

--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="./simple-kakao-map/simple-kakao-map.min.css" />
+  <link rel="stylesheet" href="./skm.min.css" />
   <title>Simple Kakao Map</title>
 </head>
 
@@ -13,12 +13,13 @@
   </div>
 
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?libraries=services&appkey=d29846c3b92dd2f8fbbfbd0009bd6976"></script>
-  <script src="./simple-kakao-map/simple-kakao-map.min.js"></script>
+  <script src="./skm.min.js"></script>
   <script>
-    const address = '버드나루로 88';
+    const address = '제주특별자치도 제주시 첨단로 242';
     const locationName = '아크로';
     simpleKakaoMap(address)
   </script>
 </body>
 
 </html>
+
